--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 </head>
 
 <body>
-<h1> HELLO THERE ITS ME PRANAV ROTHE </h1>
+    <h1> HELLO THERE ITS ME PRANAV ROTHE </h1>
+    
+    <p> Hello all and welcome to the github.com </p>
+    
+    <h1> Learning SSH Remote Repository </h1>
 </body>
   
- </html>
+</html>
