Addes CSS Style

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <!-- Please use CSS Style tags in here -->
 
 <head>
+	<style>
+		h1 {color: blue; font-size: 300%}
+		p {color: blue}
+	</style>
 </head>
 
 <body>
