Added a few new lines

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <p> Hello all and welcome to the github.com </p>
     
     <h1> Learning SSH Remote Repository </h1>
+	<h1> Merging multiple commits in git </h1>
+	<h1> Commit one </h1>
+	<h1> Commit two </h1>
+	<h1> Commit three </h1>
 </body>
   
 </html>
