RT: Added a Style for H2 tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
 	<style>
 		h1 {color: blue; font-size: 300%}
+		h2 {color: blue; font-size: 150%} <!-- Added at remote -->
 		p {color: blue}
 	</style>
 </head>
