--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<style>
 		h1 {color: blue; font-size: 300%}
 		h2 {color: blue; font-size: 150%} <!-- Added at remote -->
+		h3 {color: blue; font-size: 150%} <!-- Added at local -->
 		p {color: blue}
 	</style>
 </head>
